updated dependencies to fix vulnerabilities

--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "6.1.12",
-    "@aws-sdk/client-transcribe-streaming": "3.583.0",
-    "@aws-sdk/client-translate": "3.583.0",
-    "@aws-sdk/credential-providers": "3.583.0",
+    "@aws-sdk/client-transcribe-streaming": "^3.629.0",
+    "@aws-sdk/client-translate": "^3.629.0",
+    "@aws-sdk/credential-providers": "^3.630.0",
     "@cloudscape-design/components": "3.0.640",
     "@testing-library/jest-dom": "6.4.5",
     "@testing-library/react": "15.0.7",
     "@testing-library/user-event": "14.5.2",
-    "aws-amplify": "6.3.4",
-    "axios": "1.7.2",
+    "aws-amplify": "^6.5.0",
+    "axios": "^1.7.4",
     "buffer": "6.0.3",
     "microphone-stream": "6.0.1",
     "process": "0.11.10",
